@@ -169,9 +169,8 @@
 
 (define-public (activate-readline)
   (if (and (isatty? (current-input-port))
-	   (not (and (module-defined? the-root-module
-				      'use-emacs-interface)
-		     use-emacs-interface)))
+	   (not (and (module-defined? the-root-module 'use-emacs-interface)
+		     (module-ref the-root-module 'use-emacs-interface))))
       (let ((read-hook (lambda () (run-hook before-read-hook))))
 	(set-current-input-port (readline-port))
 	(set! repl-reader
