@@ -1,3 +1,8 @@
+2000-12-12  Dirk Herrmann  <D.Herrmann@tu-bs.de>
+
+	* boot-9.scm (top-repl):  Lookup 'use-emacs-interface in
+	the-root-module.
+
 2000-12-07  Neil Jerram  <neil@ossau.uklinux.net>
 
 	* emacs.scm (flush-whitespace): Fix spelling typo ("recieving").
